# stocks

./: IMPLEMENTATION_PLAN.md  README.md  requirements.txt
quant-agent-trader/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEBUGGING_CHEATSHEET.md  Dockerfile  Makefile  README.md  TECHNICAL_AUDIT.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  quant_system.py  requirements-test.txt  requirements.txt  research_engine.py  ruff.toml
quant-agent-trader/.github/workflows/: ci.yml  test.yml
quant-agent-trader/agents/: __init__.py  agent_dispatcher.py  base_agent.py  market_microstructure.py  plugin_manager.py  regime_classifier.py
quant-agent-trader/agents/fundamental/: __init__.py  balance_sheet_agent.py  cashflow_agent.py  crisil_agent.py  dividend_agent.py  earnings_agent.py  growth_agent.py  industry_comparison_agent.py  management_quality_agent.py  valuation_agent.py
quant-agent-trader/agents/india/: __init__.py  fno_agent.py  india_vix_agent.py  mf_holdings_agent.py  nifty_sentiment_agent.py
quant-agent-trader/agents/macro/: __init__.py  commodity_agent.py  currency_agent.py  gdp_agent.py  inflation_agent.py  interest_rate_agent.py  sector_rotation_agent.py
quant-agent-trader/agents/market_structure/: __init__.py  dark_pool_agent.py  options_flow_agent.py  order_imbalance_agent.py  put_call_ratio_agent.py
quant-agent-trader/agents/quant/: __init__.py  factor_model_agent.py  mean_reversion_agent.py  pairs_trading_agent.py  stat_arb_agent.py
quant-agent-trader/agents/risk/: __init__.py  correlation_risk_agent.py  drawdown_agent.py  tail_risk_agent.py  volatility_regime_agent.py
quant-agent-trader/agents/sentiment/: __init__.py  analyst_rating_agent.py  insider_trading_agent.py  news_sentiment_agent.py  social_sentiment_agent.py
quant-agent-trader/agents/technical/: __init__.py  (+19 more)
quant-agent-trader/analytics/: __init__.py  performance_metrics.py
quant-agent-trader/backtesting/: __init__.py  engine.py  vectorized.py  walk_forward.py
quant-agent-trader/config/: settings.py
quant-agent-trader/dashboard/: app.py
quant-agent-trader/data/: __init__.py  agents.json  equity_curve.csv  feature_store.py  import_portfolio.py  import_trades.py  portfolio.json  run_holdings_analysis.py  services.py  signals.json  trades.json  training_data_generator.py  validators.py
quant-agent-trader/execution/: __init__.py  execution_engine.py  order_schema.py  paper_trader.py
quant-agent-trader/features/: __init__.py  config.py  cross_asset_features.py  factor_models.py  indicators.py  pipeline.py  registry.py
quant-agent-trader/learning/: evolution_engine.py  feedback_system.py  self_improving_system.py  strategy_evaluator.py  strategy_generator.py
quant-agent-trader/models/: __init__.py  meta_model.py  scheduler.py
quant-agent-trader/orchestration/: __init__.py  dispatcher.py
quant-agent-trader/portfolio/: __init__.py  optimization.py  optimizer.py  portfolio_engine.py
quant-agent-trader/research/: __init__.py
quant-agent-trader/risk/: risk_engine.py
quant-agent-trader/signals/: __init__.py  feature_extractor.py  meta_model_aggregator.py  signal_aggregator.py  signal_schema.py
quant-agent-trader/strategies/: __init__.py  mean_reversion_strategy.yaml  ml_meta_strategy.yaml  momentum_strategy.yaml  plugin_system.py
quant-agent-trader/tests/: conftest.py  test_signal_schema.py
quant-agent-trader/utils/: __init__.py  experiment_tracker.py  logging_config.py  monitoring.py  profiler.py  security.py  security_scanner.py  self_evaluation.py  structured_logging.py  validation.py
(+89 files in other folders)
